add shopify product base

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sanity/image-url": "^0.140.19",
     "astrochimp": "^1.0.1",
     "axios": "^0.20.0",
+    "base64-string": "^1.1.2",
     "cross-env": "^7.0.2",
     "embla-carousel": "^4.0.6",
     "framer-motion": "^2.9.4",
@@ -26,6 +27,7 @@
     "react-gtm-module": "^2.0.11",
     "react-hook-form": "^6.9.5",
     "react-intersection-observer": "^8.29.1",
+    "shopify-buy": "^2.11.0",
     "sitemap": "^6.3.2",
     "spacetime": "^6.6.4",
     "sscroll": "^1.1.2",
