--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^2.9.4",
     "marquee3000": "^1.1.1",
     "next": "^10.0.0",
+    "raw-body": "^2.4.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-gtm-module": "^2.0.11",
