--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "cross-env": "^7.0.2",
     "embla-carousel": "^4.0.6",
     "framer-motion": "^2.9.4",
-    "marquee3000": "^1.1.1",
     "next": "^10.0.0",
     "raw-body": "^2.4.1",
     "react": "^17.0.1",
@@ -28,6 +27,7 @@
     "react-gtm-module": "^2.0.11",
     "react-hook-form": "^6.9.6",
     "react-intersection-observer": "^8.29.1",
+    "react-use": "^15.3.4",
     "shopify-buy": "^2.11.0",
     "sitemap": "^6.3.2",
     "spacetime": "^6.8.0",
