--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "base64-string": "^1.1.2",
     "cross-env": "^7.0.2",
     "embla-carousel": "^4.0.6",
+    "focus-trap-react": "^8.1.1",
     "framer-motion": "^2.9.4",
     "jsondiffpatch": "^0.4.1",
     "next": "^10.0.1",
