--- a/package.json
+++ b/package.json
@@ -12,42 +12,43 @@
   },
   "dependencies": {
     "@sanity/block-content-to-react": "^2.0.7",
-    "@sanity/client": "^2.0.9",
+    "@sanity/client": "^2.1.0",
     "@sanity/image-url": "^0.140.19",
     "astrochimp": "^1.0.1",
     "axios": "^0.21.0",
     "base64-string": "^1.1.2",
-    "cross-env": "^7.0.2",
-    "embla-carousel": "^4.1.0",
-    "focus-trap-react": "^8.1.1",
-    "framer-motion": "^2.9.4",
+    "cross-env": "^7.0.3",
+    "embla-carousel": "^4.1.2",
+    "focus-trap-react": "^8.3.2",
+    "framer-motion": "^2.9.5",
     "jsondiffpatch": "^0.4.1",
-    "next": "^10.0.1",
+    "next": "^10.0.3",
     "raw-body": "^2.4.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-gtm-module": "^2.0.11",
-    "react-hook-form": "^6.11.0",
-    "react-intersection-observer": "^8.30.3",
+    "react-hook-form": "^6.12.2",
+    "react-intersection-observer": "^8.31.0",
     "react-use": "^15.3.4",
     "shopify-buy": "^2.11.0",
     "sitemap": "^6.3.3",
-    "spacetime": "^6.9.0",
+    "spacetime": "^6.12.1",
     "sscroll": "^1.1.2",
-    "swr": "^0.3.8",
-    "vanilla-lazyload": "^17.1.3"
+    "swr": "^0.3.9",
+    "tailwindcss": "^2.0.1",
+    "vanilla-lazyload": "^17.3.0"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^10.0.1",
-    "@types/react": "^16.9.56",
-    "postcss": "^8.1.7",
+    "@next/bundle-analyzer": "^10.0.3",
+    "@types/react": "^17.0.0",
+    "postcss": "^8.2.1",
     "postcss-custom-media": "^7.0.8",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-import": "^12.0.1",
     "postcss-mixins": "^6.2.3",
     "postcss-nested": "^4.2.3",
     "postcss-preset-env": "^6.7.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.1.2"
   },
   "peerDependencies": {
     "postcss": "^8.0.0"
