--- a/studio/package.json
+++ b/studio/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^16.14.0",
     "react-icons": "^4.1.0",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.11",
+    "sanity-plugin-media-library": "^1.0.2",
     "sanity-plugin-vercel-deploy": "^1.0.8",
     "spacetime": "^6.6.0",
     "styled-components": "^5.1.0"
