--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "postcss-mixins": "^6.2.3",
     "postcss-nested": "^4.2.3",
     "postcss-preset-env": "^6.7.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "webpack": "^5.26.0"
   },
   "peerDependencies": {
     "postcss": "^8.0.0"
