--- a/package.json
+++ b/package.json
@@ -57,8 +57,7 @@
     "postcss-mixins": "^6.2.3",
     "postcss-nested": "^4.2.3",
     "postcss-preset-env": "^6.7.0",
-    "typescript": "^4.1.3",
-    "webpack": "^5.26.0"
+    "typescript": "^4.1.3"
   },
   "peerDependencies": {
     "postcss": "^8.0.0"
