--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "sideEffects": false,
   "license": "MIT",
+  "engines": {
+    "node": "14.x"
+  },
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.25",
     "@reach/rect": "^0.13.2",
@@ -47,6 +50,7 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^10.0.3",
     "@types/classnames": "^2.2.10",
+    "@types/cookie": "^0.4.0",
     "@types/node": "^14.14.16",
     "@types/react": "^17.0.0",
     "@types/shopify-buy": "^2.10.5",
