remove paths from tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,13 +14,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "paths": {
-      "@/blocks/*": ["blocks/*"],
-      "@/components/*": ["components/*"],
-      "@/lib/*": ["lib/*"],
-      "@/modules/*": ["modules/*"],
-      "@/pages/*": ["pages/*"],
-    },
+    // "paths": {
+    //   "@/blocks/*": ["blocks/*"],
+    //   "@/components/*": ["components/*"],
+    //   "@/lib/*": ["lib/*"],
+    //   "@/modules/*": ["modules/*"],
+    //   "@/pages/*": ["pages/*"],
+    // },
   },
   "include": [
     "next-env.d.ts",
