--- a/studio/package.json
+++ b/studio/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@sanity/base": "^2.6.0",
     "@sanity/cli": "^2.6.0",
+    "@sanity/color-input": "^2.2.6",
     "@sanity/components": "^2.2.6",
     "@sanity/core": "^2.6.1",
     "@sanity/dashboard": "^2.2.6",
