Adds token addition

--- a/.sanity-template/manifest.json
+++ b/.sanity-template/manifest.json
@@ -33,6 +33,13 @@
         "projectId": ["NEXT_PUBLIC_SANITY_PROJECT_ID"],
         "dataset": ["NEXT_PUBLIC_SANITY_DATASET"]
       },
+      "tokens": [
+          {
+              "label": "livePreview",
+              "role": "write",
+              "envVar": "SANITY_API_TOKEN"
+          }
+      ],
       "corsOrigins": [
         {
           "origin": "http://localhost:3000",
