--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "framer-motion": "^4.0.0",
     "jsondiffpatch": "^0.4.1",
     "keen-slider": "^5.4.0",
+    "marqy": "^0.0.3",
     "next": "^10.0.9",
     "next-themes": "^0.0.12",
-    "qs": "^6.9.4",
+    "qs": "^6.10.0",
     "raw-body": "^2.4.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -41,7 +42,8 @@
     "shopify-buy": "^2.11.0",
     "sitemap": "^6.3.3",
     "swr": "^0.5.3",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^2.0.2",
+    "use-intersection": "^0.2.1"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^10.0.3",
