--- a/package.json
+++ b/package.json
@@ -31,13 +31,17 @@
     "keen-slider": "^5.4.0",
     "marqy": "^0.0.3",
     "next": "^10.0.9",
+    "next-plugin-preact": "^3.0.3",
     "next-themes": "^0.0.12",
+    "preact": "^10.5.13",
+    "preact-render-to-string": "^5.1.16",
     "qs": "^6.10.0",
     "raw-body": "^2.4.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "npm:@preact/compat@0.0.3",
+    "react-dom": "npm:@preact/compat@0.0.3",
     "react-hook-form": "^6.13.1",
     "react-intersection-observer": "^8.31.0",
+    "react-ssr-prepass": "npm:preact-ssr-prepass@^1.1.3",
     "react-use": "^17.2.1",
     "shopify-buy": "^2.11.0",
     "sitemap": "^6.3.3",
