better accessibility for pdp options

--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "framer-motion": "^4.0.0",
     "jsondiffpatch": "^0.4.1",
     "keen-slider": "^5.4.0",
-    "marqy": "^0.0.3",
+    "marqy": "0.0.6",
     "next": "^10.0.9",
     "next-plugin-preact": "^3.0.3",
-    "next-themes": "^0.0.12",
+    "next-themes": "0.0.14",
     "preact": "^10.5.13",
     "preact-render-to-string": "^5.1.16",
     "qs": "^6.10.0",
@@ -41,11 +41,12 @@
     "react-dom": "npm:@preact/compat@0.0.3",
     "react-hook-form": "^6.13.1",
     "react-intersection-observer": "^8.31.0",
+    "react-keyed-flatten-children": "^1.3.0",
     "react-ssr-prepass": "npm:preact-ssr-prepass@^1.1.3",
     "react-use": "^17.2.1",
     "shopify-buy": "^2.11.0",
     "sitemap": "^6.3.3",
-    "swr": "^0.5.3",
+    "swr": "^0.5.4",
     "tailwindcss": "^2.0.2",
     "use-intersection": "^0.2.1"
   },
