--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cross-env": "^7.0.3",
     "focus-trap-react": "^8.3.2",
     "framer-motion": "^4.0.0",
+    "js-cookie": "^2.2.1",
     "jsondiffpatch": "^0.4.1",
     "keen-slider": "^5.4.0",
     "marqy": "0.0.6",
@@ -35,15 +36,13 @@
     "next-themes": "0.0.14",
     "preact": "^10.5.13",
     "preact-render-to-string": "^5.1.16",
-    "qs": "^6.10.0",
+    "qs": "^6.10.1",
     "raw-body": "^2.4.1",
     "react": "npm:@preact/compat@0.0.3",
     "react-dom": "npm:@preact/compat@0.0.3",
     "react-hook-form": "^6.13.1",
-    "react-intersection-observer": "^8.31.0",
     "react-keyed-flatten-children": "^1.3.0",
     "react-ssr-prepass": "npm:preact-ssr-prepass@^1.1.3",
-    "react-use": "^17.2.1",
     "shopify-buy": "^2.11.0",
     "sitemap": "^6.3.3",
     "swr": "^0.5.4",
