--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "js-cookie": "^2.2.1",
     "jsondiffpatch": "^0.4.1",
     "keen-slider": "^5.4.0",
-    "marqy": "0.0.6",
+    "marqy": "^0.0.7",
     "next": "^10.1.1",
     "next-plugin-preact": "^3.0.3",
     "next-themes": "0.0.14",
