use axios on waitlist, closes #9

--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "preact-render-to-string": "^5.1.18",
     "qs": "^6.10.1",
     "raw-body": "^2.4.1",
-    "react": "npm:@preact/compat@0.0.3",
-    "react-dom": "npm:@preact/compat@0.0.3",
+    "react": "npm:@preact/compat",
+    "react-dom": "npm:@preact/compat",
     "react-hook-form": "^6.13.1",
     "react-keyed-flatten-children": "^1.3.0",
     "react-ssr-prepass": "npm:preact-ssr-prepass@^1.1.3",
