--- a/package.json
+++ b/package.json
@@ -39,11 +39,10 @@
     "preact-render-to-string": "^5.1.18",
     "qs": "^6.10.1",
     "raw-body": "^2.4.1",
-    "react": "npm:@preact/compat",
-    "react-dom": "npm:@preact/compat",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^6.13.1",
     "react-keyed-flatten-children": "^1.3.0",
-    "react-ssr-prepass": "npm:preact-ssr-prepass@^1.1.3",
     "shopify-buy": "^2.11.0",
     "sitemap": "^6.3.3",
     "swr": "^0.5.4",
