--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.25",
-    "@reach/rect": "^0.15.0",
+    "@reach/rect": "^0.16.0",
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^2.7.0",
     "@sanity/image-url": "^0.140.19",
@@ -29,7 +29,7 @@
     "cross-env": "^7.0.3",
     "focus-trap-react": "^8.3.2",
     "framer-motion": "^4.0.3",
-    "js-cookie": "^2.2.1",
+    "js-cookie": "^3.0.0",
     "jsondiffpatch": "^0.4.1",
     "keen-slider": "^5.4.0",
     "marqy": "^0.0.8",
@@ -44,7 +44,6 @@
     "shopify-buy": "^2.11.0",
     "sitemap": "^7.0.0",
     "swr": "^0.5.4",
-    "tailwindcss": "^2.0.2",
     "use-intersection": "^0.2.1"
   },
   "devDependencies": {
@@ -54,11 +53,10 @@
     "@types/node": "^16.0.1",
     "@types/react": "^17.0.0",
     "@types/shopify-buy": "^2.10.5",
+    "autoprefixer": "^10.3.1",
     "postcss": "^8.2.1",
-    "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^14.0.2",
-    "postcss-nested": "^5.0.5",
-    "postcss-preset-env": "^6.7.0",
+    "tailwindcss": "^2.2.4",
     "typescript": "^4.3.5"
   },
   "peerDependencies": {
