--- a/studio/package.json
+++ b/studio/package.json
@@ -10,18 +10,19 @@
     "test": "sanity check"
   },
   "dependencies": {
-    "@sanity/base": "^2.12.2",
-    "@sanity/cli": "^2.12.2",
-    "@sanity/color-input": "^2.11.0",
-    "@sanity/components": "^2.2.6",
-    "@sanity/core": "^2.12.2",
-    "@sanity/dashboard": "^2.10.5",
-    "@sanity/default-layout": "^2.12.2",
-    "@sanity/default-login": "^2.11.1",
-    "@sanity/desk-tool": "^2.12.2",
-    "@sanity/vision": "^2.11.2",
+    "@sanity/base": "^2.15.1",
+    "@sanity/cli": "^2.15.0",
+    "@sanity/color-input": "^2.15.1",
+    "@sanity/components": "^2.14.0",
+    "@sanity/core": "^2.15.0",
+    "@sanity/dashboard": "^2.15.1",
+    "@sanity/default-layout": "^2.15.1",
+    "@sanity/default-login": "^2.15.0",
+    "@sanity/desk-tool": "^2.15.2",
+    "@sanity/vision": "^2.15.0",
     "bcp47": "^1.1.2",
     "nanoid": "^3.1.10",
+    "phosphor-react": "^1.3.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
