--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next": "^11.0.0",
     "next-themes": "^0.0.15",
     "qs": "^6.10.1",
+    "query-string": "^7.0.1",
     "raw-body": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -43,7 +44,7 @@
     "react-keyed-flatten-children": "^1.3.0",
     "shopify-buy": "^2.11.0",
     "sitemap": "^7.0.0",
-    "swr": "^0.5.4",
+    "swr": "^1.0.0",
     "use-intersection": "^0.2.1"
   },
   "devDependencies": {
