--- a/studio/package.json
+++ b/studio/package.json
@@ -10,17 +10,16 @@
     "test": "sanity check"
   },
   "dependencies": {
-    "@sanity/base": "^2.15.1",
-    "@sanity/cli": "^2.15.0",
-    "@sanity/color-input": "^2.15.1",
-    "@sanity/components": "^2.14.0",
-    "@sanity/core": "^2.15.0",
-    "@sanity/dashboard": "^2.15.1",
-    "@sanity/default-layout": "^2.15.1",
-    "@sanity/default-login": "^2.15.0",
-    "@sanity/desk-tool": "^2.15.2",
+    "@sanity/base": "^2.17.1",
+    "@sanity/cli": "^2.17.1",
+    "@sanity/color-input": "^2.17.1",
+    "@sanity/components": "2.15.2-conditional-fields.22",
+    "@sanity/core": "^2.17.1",
+    "@sanity/dashboard": "^2.17.1",
+    "@sanity/default-layout": "^2.17.1",
+    "@sanity/default-login": "^2.17.1",
+    "@sanity/desk-tool": "^2.17.1",
     "@sanity/vision": "^2.15.0",
-    "bcp47": "^1.1.2",
     "nanoid": "^3.1.10",
     "phosphor-react": "^1.3.1",
     "prop-types": "^15.7.2",
