--- a/studio/package.json
+++ b/studio/package.json
@@ -10,16 +10,16 @@
     "test": "sanity check"
   },
   "dependencies": {
-    "@sanity/base": "^2.21.0",
+    "@sanity/base": "^2.21.1",
     "@sanity/cli": "^2.21.0",
-    "@sanity/color-input": "^2.21.0",
+    "@sanity/color-input": "^2.21.1",
     "@sanity/components": "^2.14.0",
     "@sanity/core": "^2.21.0",
-    "@sanity/dashboard": "^2.21.0",
-    "@sanity/default-layout": "^2.21.0",
+    "@sanity/dashboard": "^2.21.1",
+    "@sanity/default-layout": "^2.21.1",
     "@sanity/default-login": "^2.21.0",
-    "@sanity/desk-tool": "^2.21.0",
-    "@sanity/vision": "^2.21.0",
+    "@sanity/desk-tool": "^2.21.1",
+    "@sanity/vision": "^2.21.1",
     "nanoid": "^3.1.10",
     "phosphor-react": "^1.3.1",
     "prop-types": "^15.7.2",
@@ -27,7 +27,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.13",
-    "sanity-plugin-media-library": "^2.0.0",
+    "sanity-plugin-media": "^1.4.0",
     "sanity-plugin-note-field": "^1.1.3",
     "sanity-plugin-vercel-deploy": "^2.0.0",
     "styled-components": "^5.3.0"
