--- a/package.json
+++ b/package.json
@@ -39,13 +39,13 @@
     "query-string": "^7.0.1",
     "raw-body": "^2.4.1",
     "react": "^17.0.2",
+    "react-cool-inview": "^2.0.7",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.10.1",
     "react-keyed-flatten-children": "^1.3.0",
     "shopify-buy": "^2.11.0",
     "sitemap": "^7.0.0",
-    "swr": "^1.0.0",
-    "use-intersection": "^0.2.1"
+    "swr": "^1.0.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^11.0.0",
