--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "contrast-color": "^1.0.1",
     "cross-env": "^7.0.3",
     "focus-trap-react": "^8.8.2",
-    "framer-motion": "^4.1.17",
+    "framer-motion": "^5.5.5",
     "js-cookie": "^3.0.0",
     "jsondiffpatch": "^0.4.1",
-    "keen-slider": "^5.4.0",
+    "keen-slider": "^6.4.1",
     "marqy": "^0.0.8",
-    "next": "^11.0.0",
+    "next": "^12.0.7",
     "next-themes": "^0.0.15",
     "qs": "^6.10.1",
     "query-string": "^7.0.1",
@@ -51,16 +51,17 @@
     "@next/bundle-analyzer": "^12.0.1",
     "@types/classnames": "^2.2.10",
     "@types/cookie": "^0.4.0",
-    "@types/node": "^16.11.6",
+    "@types/node": "^17.0.0",
     "@types/react": "^17.0.33",
     "@types/shopify-buy": "^2.10.5",
     "autoprefixer": "^10.4.0",
+    "cssnano": "^5.0.13",
     "postcss": "^8.3.11",
     "postcss-import": "^14.0.2",
-    "tailwindcss": "^2.2.17",
+    "tailwindcss": "^3.0.5",
     "typescript": "^4.4.4"
   },
   "peerDependencies": {
-    "postcss": "^8.0.0"
+    "postcss": "^8.4.5"
   }
 }
