replace keen with embla

--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "classnames": "^2.2.6",
     "contrast-color": "^1.0.1",
     "cross-env": "^7.0.3",
+    "embla-carousel-react": "^6.0.2",
     "focus-trap-react": "^8.8.2",
     "framer-motion": "^5.5.5",
     "js-cookie": "^3.0.0",
     "jsondiffpatch": "^0.4.1",
-    "keen-slider": "^6.4.1",
     "marqy": "^0.0.8",
     "next": "^12.0.7",
     "next-themes": "^0.0.15",
