--- a/studio/package.json
+++ b/studio/package.json
@@ -10,31 +10,32 @@
     "test": "sanity check"
   },
   "dependencies": {
-    "@sanity/base": "^2.23.2",
-    "@sanity/cli": "^2.23.2",
-    "@sanity/color-input": "^2.23.2",
+    "@sanity/base": "^2.24.0",
+    "@sanity/cli": "^2.24.0",
+    "@sanity/color-input": "^2.24.0",
     "@sanity/components": "^2.14.0",
-    "@sanity/core": "^2.23.2",
-    "@sanity/dashboard": "^2.23.2",
-    "@sanity/default-layout": "^2.23.2",
-    "@sanity/default-login": "^2.23.2",
-    "@sanity/desk-tool": "^2.23.2",
-    "@sanity/vision": "^2.23.2",
+    "@sanity/core": "^2.24.0",
+    "@sanity/dashboard": "^2.24.0",
+    "@sanity/default-layout": "^2.24.0",
+    "@sanity/default-login": "^2.24.0",
+    "@sanity/desk-tool": "^2.24.0",
+    "@sanity/vision": "^2.24.0",
     "nanoid": "^3.1.10",
     "phosphor-react": "^1.3.1",
     "prop-types": "^15.7.2",
-    "react": "^16.9",
-    "react-dom": "^16.9",
+    "react": "^17.0",
+    "react-dom": "^17.0",
     "react-icons": "^4.2.0",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.13",
     "sanity-plugin-media": "^1.4.0",
-    "sanity-plugin-note-field": "^1.1.3",
-    "sanity-plugin-vercel-deploy": "^2.1.5",
+    "sanity-plugin-note-field": "^1.1.4",
+    "sanity-plugin-vercel-deploy": "2.1.6",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^8.4.1",
+    "eslint": "^7.8.1",
+    "eslint-config-sanity": "^5.1.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-config-standard-react": "^11.0.1",
     "eslint-plugin-import": "^2.22.1",
