--- a/studio/package.json
+++ b/studio/package.json
@@ -10,16 +10,16 @@
     "test": "sanity check"
   },
   "dependencies": {
-    "@sanity/base": "^2.24.0",
-    "@sanity/cli": "^2.24.0",
-    "@sanity/color-input": "^2.24.0",
+    "@sanity/base": "^2.26.0",
+    "@sanity/cli": "^2.26.0",
+    "@sanity/color-input": "^2.26.0",
     "@sanity/components": "^2.14.0",
-    "@sanity/core": "^2.24.0",
-    "@sanity/dashboard": "^2.24.0",
-    "@sanity/default-layout": "^2.24.0",
-    "@sanity/default-login": "^2.24.0",
-    "@sanity/desk-tool": "^2.24.0",
-    "@sanity/vision": "^2.24.0",
+    "@sanity/core": "^2.26.0",
+    "@sanity/dashboard": "^2.26.0",
+    "@sanity/default-layout": "^2.26.0",
+    "@sanity/default-login": "^2.26.0",
+    "@sanity/desk-tool": "^2.26.0",
+    "@sanity/vision": "^2.26.0",
     "nanoid": "^3.1.10",
     "phosphor-react": "^1.3.1",
     "prop-types": "^15.7.2",
@@ -34,13 +34,13 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.8.1",
+    "eslint": "8.8.0",
     "eslint-config-sanity": "^5.1.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-config-standard-react": "^11.0.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-standard": "^5.0.0",
     "prettier-eslint-cli": "^5.0.0"
