--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hull",
-  "version": "2.5.0",
+  "version": "2.6.0",
   "scripts": {
     "dev": "cross-env NODE_ENV=development next dev",
     "build": "echo 'Building Sanity to public/studio…' && cd studio && npx sanity build ../public/studio -y && cd .. && next build",
@@ -8,40 +8,37 @@
     "analyze": "cross-env ANALYZE=true next build",
     "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
     "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build",
-    "postinstall": "cd studio && npm install"
+    "postinstall": "cd studio && yarn"
   },
   "sideEffects": false,
   "license": "MIT",
-  "engines": {
-    "node": "14.x"
-  },
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.71",
-    "@reach/rect": "^0.16.0",
+    "@reach/rect": "0.17.0",
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^3.0.3",
     "@sanity/image-url": "^1.0.1",
     "@vimeo/player": "^2.15.3",
-    "axios": "^0.25.0",
+    "axios": "0.27.2",
     "base64-string": "^1.1.2",
     "classnames": "^2.2.6",
     "contrast-color": "^1.0.1",
     "cross-env": "^7.0.3",
     "embla-carousel-react": "^6.0.2",
-    "focus-trap-react": "^8.8.2",
-    "framer-motion": "^5.5.5",
+    "focus-trap-react": "9.0.2",
+    "framer-motion": "6.3.15",
     "js-cookie": "^3.0.0",
     "jsondiffpatch": "^0.4.1",
     "marqy": "^0.0.8",
     "next": "^12.0.7",
-    "next-themes": "^0.0.15",
+    "next-themes": "0.2.0",
     "qs": "^6.10.1",
     "query-string": "^7.0.1",
     "raw-body": "^2.4.1",
     "react": "^17.0.2",
-    "react-cool-inview": "^2.0.8",
+    "react-cool-inview": "3.0.1",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.18.0",
+    "react-hook-form": "7.33.0",
     "react-keyed-flatten-children": "^1.3.0",
     "shopify-buy": "^2.13.0",
     "sitemap": "^7.0.0",
@@ -50,7 +47,7 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^12.0.1",
     "@types/classnames": "^2.2.10",
-    "@types/cookie": "^0.4.0",
+    "@types/cookie": "0.5.1",
     "@types/node": "^17.0.0",
     "@types/react": "^17.0.33",
     "@types/shopify-buy": "^2.10.5",
