--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "classnames": "^2.2.6",
     "contrast-color": "^1.0.1",
     "cross-env": "^7.0.3",
-    "embla-carousel-react": "^6.0.2",
-    "focus-trap-react": "9.0.2",
-    "framer-motion": "6.3.15",
+    "embla-carousel-react": "^7.0.1",
+    "focus-trap-react": "^10.0.0",
+    "framer-motion": "^7.2.1",
     "js-cookie": "^3.0.0",
     "jsondiffpatch": "^0.4.1",
     "marqy": "^0.0.8",
@@ -35,10 +35,10 @@
     "qs": "^6.10.1",
     "query-string": "^7.0.1",
     "raw-body": "^2.4.1",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-cool-inview": "3.0.1",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "7.33.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "7.34.2",
     "react-keyed-flatten-children": "^1.3.0",
     "shopify-buy": "^2.13.0",
     "sitemap": "^7.0.0",
@@ -48,8 +48,8 @@
     "@next/bundle-analyzer": "^12.0.1",
     "@types/classnames": "^2.2.10",
     "@types/cookie": "0.5.1",
-    "@types/node": "^17.0.0",
-    "@types/react": "^17.0.33",
+    "@types/node": "^18.7.13",
+    "@types/react": "^18.0.17",
     "@types/shopify-buy": "^2.10.5",
     "autoprefixer": "^10.4.0",
     "cssnano": "^5.0.13",
