--- a/studio/package.json
+++ b/studio/package.json
@@ -10,21 +10,21 @@
     "test": "sanity check"
   },
   "dependencies": {
-    "@sanity/base": "^2.26.0",
-    "@sanity/cli": "^2.26.0",
-    "@sanity/color-input": "^2.26.0",
+    "@sanity/base": "^2.31.0",
+    "@sanity/cli": "^2.31.0",
+    "@sanity/color-input": "^2.31.0",
     "@sanity/components": "^2.14.0",
-    "@sanity/core": "^2.26.0",
-    "@sanity/dashboard": "^2.26.0",
-    "@sanity/default-layout": "^2.26.0",
-    "@sanity/default-login": "^2.26.0",
-    "@sanity/desk-tool": "^2.26.0",
-    "@sanity/vision": "^2.26.0",
-    "nanoid": "^3.1.10",
+    "@sanity/core": "^2.31.0",
+    "@sanity/dashboard": "^2.31.0",
+    "@sanity/default-layout": "^2.31.0",
+    "@sanity/default-login": "^2.31.0",
+    "@sanity/desk-tool": "^2.31.0",
+    "@sanity/vision": "^2.31.0",
+    "nanoid": "^4.0.0",
     "phosphor-react": "^1.3.1",
     "prop-types": "^15.7.2",
-    "react": "^17.0",
-    "react-dom": "^17.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.2.0",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.13",
     "sanity-plugin-media": "^1.4.0",
@@ -34,15 +34,15 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "8.8.0",
-    "eslint-config-sanity": "^5.1.0",
-    "eslint-config-standard": "^16.0.3",
+    "eslint": "^8.22.0",
+    "eslint-config-sanity": "^6.0.0",
+    "eslint-config-standard": "^17.0.0",
     "eslint-config-standard-react": "^11.0.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "6.0.0",
+    "eslint-plugin-promise": "6.0.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-standard": "^5.0.0",
-    "prettier-eslint-cli": "^5.0.0"
+    "prettier-eslint-cli": "^7.1.0"
   }
 }
