upgrade packages and update deprecated shopify API

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hull",
-  "version": "2.6.0",
+  "version": "2.7.0",
   "scripts": {
     "dev": "cross-env NODE_ENV=development next dev",
     "build": "echo 'Building Sanity to public/studio…' && cd studio && npx sanity build ../public/studio -y && cd .. && next build",
@@ -14,35 +14,35 @@
   "license": "MIT",
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.71",
-    "@reach/rect": "0.17.0",
+    "@reach/rect": "^0.18.0",
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^3.0.3",
     "@sanity/image-url": "^1.0.1",
     "@vimeo/player": "^2.15.3",
-    "axios": "0.27.2",
+    "axios": "^1.2.1",
     "base64-string": "^1.1.2",
     "classnames": "^2.2.6",
     "contrast-color": "^1.0.1",
     "cross-env": "^7.0.3",
     "embla-carousel-react": "^7.0.1",
     "focus-trap-react": "^10.0.0",
-    "framer-motion": "^7.2.1",
+    "framer-motion": "^8.0.2",
     "js-cookie": "^3.0.0",
     "jsondiffpatch": "^0.4.1",
     "marqy": "^0.0.8",
     "next": "^12.0.7",
-    "next-themes": "0.2.0",
+    "next-themes": "^0.2.1",
     "qs": "^6.10.1",
-    "query-string": "^7.0.1",
+    "query-string": "^8.1.0",
     "raw-body": "^2.4.1",
     "react": "^18.2.0",
     "react-cool-inview": "3.0.1",
     "react-dom": "^18.2.0",
-    "react-hook-form": "7.34.2",
+    "react-hook-form": "^7.41.2",
     "react-keyed-flatten-children": "^1.3.0",
     "shopify-buy": "^2.13.0",
     "sitemap": "^7.0.0",
-    "swr": "^1.0.0"
+    "swr": "^2.0.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.0.1",
@@ -54,7 +54,7 @@
     "autoprefixer": "^10.4.0",
     "cssnano": "^5.0.13",
     "postcss": "^8.3.11",
-    "postcss-import": "^14.0.2",
+    "postcss-import": "^15.1.0",
     "tailwindcss": "^3.0.5",
     "typescript": "^4.4.4"
   },
