--- a/studio/package.json
+++ b/studio/package.json
@@ -10,24 +10,23 @@
     "test": "sanity check"
   },
   "dependencies": {
-    "@sanity/base": "^2.31.0",
-    "@sanity/cli": "^2.31.0",
-    "@sanity/color-input": "^2.31.0",
+    "@sanity/base": "^2.35.4",
+    "@sanity/cli": "^2.35.3",
+    "@sanity/color-input": "^2.36.0",
     "@sanity/components": "^2.14.0",
-    "@sanity/core": "^2.31.0",
-    "@sanity/dashboard": "^2.31.0",
-    "@sanity/default-layout": "^2.31.0",
-    "@sanity/default-login": "^2.31.0",
-    "@sanity/desk-tool": "^2.31.0",
-    "@sanity/vision": "^2.31.0",
+    "@sanity/core": "^2.35.3",
+    "@sanity/dashboard": "^2.36.0",
+    "@sanity/default-layout": "^2.35.4",
+    "@sanity/default-login": "^2.35.4",
+    "@sanity/desk-tool": "^2.35.4",
+    "@sanity/vision": "^2.35.4",
     "nanoid": "^4.0.0",
     "phosphor-react": "^1.3.1",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.2.0",
-    "sanity-plugin-dashboard-widget-document-list": "^0.0.13",
-    "sanity-plugin-media": "^1.4.0",
+    "sanity-plugin-media": "^1.5.1",
     "sanity-plugin-note-field": "^1.1.4",
     "sanity-plugin-vercel-deploy": "2.1.6",
     "styled-components": "^5.3.0"
@@ -37,10 +36,10 @@
     "eslint": "^8.22.0",
     "eslint-config-sanity": "^6.0.0",
     "eslint-config-standard": "^17.0.0",
-    "eslint-config-standard-react": "^11.0.1",
+    "eslint-config-standard-react": "^13.0.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "6.0.1",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-standard": "^5.0.0",
     "prettier-eslint-cli": "^7.1.0"
